fix: 🐛 Fix Workflow

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install -g yarn
-      - run: cp .env.stage.example .env
+      - run: cp .env.stage.sample .env
       - run: yarn
         # This is nest start command, don't misread about development mode. It's ready at production mode1
       # - run: yarn build
