Trigger to EC2 Medium Tier Server

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,4 +26,5 @@ jobs:
       - run: npm install -g yarn
       - run: cp .env.stage.sample .env
       - run: yarn
+      - run: yarn genfont
       - run: yarn build
