--- a/.env.stage.sample
+++ b/.env.stage.sample
@@ -3,4 +3,4 @@ NEXT_APP_VERSION=1.0.0
 NEXT_PUBLIC_API_URL=http://ec2-18-143-141-54.ap-southeast-1.compute.amazonaws.com:8080
 NEXT_PUBLIC_WEBHOOK_TOKEN=XXXXXXXX
 NEXT_PUBLIC_GOOGLE_ANALYTICS=G-XXXXXXXX
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_SITE_URL=http://ec2-13-251-77-106.ap-southeast-1.compute.amazonaws.com:3000
