Revert "change port to 80"
This reverts commit 3c78671d7be303d336e0a2245c11b705f83cee45.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 80",
+    "start": "next start",
     "export": "next export",
     "start-dev": "docker-compose up && yarn dev",
     "build-stats": "cross-env ANALYZE=true yarn build",
