--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nextjs-progressbar": "^0.0.14",
     "nprogress": "^0.2.0",
     "qs": "^6.11.0",
+    "random-name": "^0.1.2",
     "react": "18.1.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.1.0",
@@ -83,6 +84,7 @@
     "@types/node": "17.0.36",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.7",
+    "@types/random-name": "^0.1.0",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "@types/react-transition-group": "^4.4.5",
