🎸feat: Add API Key to header in api

--- a/.env.stage.sample
+++ b/.env.stage.sample
@@ -4,6 +4,7 @@ NEXT_PUBLIC_API_URL=https://service.sharetodolist.com
 NEXT_PUBLIC_WEBHOOK_TOKEN=XXXXXXXX
 NEXT_PUBLIC_GOOGLE_ANALYTICS=G-XXXXXXXX
 NEXT_PUBLIC_SITE_URL=https://sharetodolist.com
+NEXT_PUBLIC_API_KEY=linhcutehotme
 
 ## Firebase Environments Variable ##
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAO8bp2kSBaNdnHaZZ5GIZlikBrPf3ggJ8
