--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,7 +5,7 @@ name: TodoList Frontend Pipeline
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main-2"]
   # This instruction can only be used on test.workflow.yml for CI Stage in the future
   # pull_request:
   #   branches: ["main"]
