--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "db": "json-server --watch src/api/fixture/db.json --port 3100"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/sortable": "^7.0.1",
+    "@dnd-kit/utilities": "^3.2.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@headlessui/react": "^1.6.4",
@@ -86,7 +89,6 @@
     "@types/qs": "^6.9.7",
     "@types/random-name": "^0.1.0",
     "@types/react": "18.0.9",
-    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.5",
     "@types/react-transition-group": "^4.4.5",
     "@types/socket.io-client": "^1.4.34",
