--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,11 @@
 NEXT_APP_VERSION=1.0.0
-# NEXT_PUBLIC_SITE_URL=https://stage.abcsoftwarecompany.com
+NEXT_PUBLIC_SITE_URL=https://sharetodolist.com
 NEXT_PUBLIC_API_URL=https://service.sharetodolist.com
 NEXT_PUBLIC_WEBHOOK_TOKEN=XXXXXXXX
 NEXT_PUBLIC_GOOGLE_ANALYTICS=G-XXXXXXXX
-NEXT_PUBLIC_SITE_URL=https://sharetodolist.com
 NEXT_PUBLIC_API_KEY=linhcutehotme
 
-## Firebase Environments Variable ##
+# Firebase Environments Variable
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAO8bp2kSBaNdnHaZZ5GIZlikBrPf3ggJ8
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=todolist-386a7.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=todolist-386a7
