--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,16 +20,6 @@
     },
     "plugins": [{"name": "typescript-plugin-css-modules"}]
   },
-  "include": [
-    "next-env.d.ts",
-    "types.d.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.js",
-    "src/middleware.ts",
-    "src/components/fire-auth/backup",
-    "src/components/fire-auth/backup2",
-    "src/components/fire-auth/backup3"
-  ],
+  "include": ["next-env.d.ts", "types.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.js", "src/middleware.ts"],
   "exclude": ["node_modules"]
 }
