--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,12 @@
-NEXT_PUBLIC_SITE_URL=https://sharetodolist.com
-NEXT_PUBLIC_API_URL=https://service.sharetodolist.com
-NEXT_PUBLIC_WEBHOOK_TOKEN=XXXXXXXX
-NEXT_PUBLIC_GOOGLE_ANALYTICS=G-XXXXXXXX
-NEXT_PUBLIC_API_KEY=linhcutehotme
+NEXT_PUBLIC_SITE_URL=
+NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_API_KEY=
 
-# Firebase Environments Variable
-NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAO8bp2kSBaNdnHaZZ5GIZlikBrPf3ggJ8
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=todolist-386a7.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=todolist-386a7
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=todolist-386a7.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1097059199863
-NEXT_PUBLIC_FIREBASE_APP_ID=1:1097059199863:web:04b6b5b40b787a93c0cf72
+NEXT_PUBLIC_GOOGLE_ANALYTICS=
+
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
