--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "db": "json-server --watch src/api/fixture/db.json --port 3100"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.198.0",
     "@dnd-kit/core": "^6.0.5",
     "@dnd-kit/modifiers": "^6.0.0",
     "@dnd-kit/sortable": "^7.0.1",
@@ -44,6 +45,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.1",
     "@reduxjs/toolkit": "^1.8.6",
+    "aws-sdk": "^2.1242.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
