--- a/.github/workflows/deploy.staging.yml
+++ b/.github/workflows/deploy.staging.yml
@@ -1,11 +1,11 @@
-name: CI
+name: Deploy on server stage
 on:
   push:
     branches: ["main"]
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest-4-cores
+    runs-on: ubuntu-latest
     steps:
       - name: Pull code
         uses: actions/checkout@v3
